==> wyardt/OV7670/Src/ov7670.c <==
#include "OV7670.h"
#include "stm32f4xx.h"

void CLK_init_ON(void)
{
  
    GPIO_InitTypeDef GPIO_InitStructure;
    //RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOA, ENABLE);
    __HAL_RCC_GPIOA_CLK_ENABLE();
    GPIO_InitStructure.Pin =GPIO_PIN_8; 
    GPIO_InitStructure.Speed = GPIO_SPEED_HIGH; 
    GPIO_InitStructure.Mode = GPIO_MODE_OUTPUT_PP; 
    HAL_GPIO_Init(GPIOA, &GPIO_InitStructure);
    //RCC_MCOConfig(RCC_MCO_HSE  );//hsi
    HAL_RCC_MCOConfig(RCC_MCO1, RCC_MCO1SOURCE_PLLCLK, RCC_MCODIV_5);
}

void CLK_init_OFF(void)
{
  
    GPIO_InitTypeDef GPIO_InitStructure;
    __HAL_RCC_GPIOA_CLK_ENABLE();
    GPIO_InitStructure.Pin =GPIO_PIN_8; 
    GPIO_InitStructure.Speed = GPIO_SPEED_HIGH; 
    GPIO_InitStructure.Mode = GPIO_MODE_OUTPUT_PP;
    HAL_GPIO_Init(GPIOA, &GPIO_InitStructure);
}

void OV7670_GPIO_Init(void)
{
  
  GPIO_InitTypeDef GPIO_InitStructure;
   /* Enable GPIOC  clock */
  __HAL_RCC_GPIOC_CLK_ENABLE();
  GPIO_InitStructure.Pin =  GPIO_PIN_0|GPIO_PIN_1|GPIO_PIN_2|GPIO_PIN_3|GPIO_PIN_4|GPIO_PIN_5|GPIO_PIN_6|GPIO_PIN_7;
  GPIO_InitStructure.Mode = GPIO_MODE_INPUT;
  GPIO_InitStructure.Speed = GPIO_SPEED_HIGH; 
  HAL_GPIO_Init(GPIOC, &GPIO_InitStructure);
}

void OV7670_GPIO_CONTRL_CONFIG(void)
{
  
    GPIO_InitTypeDef GPIO_InitStructure;
    __HAL_RCC_GPIOA_CLK_ENABLE();
    GPIO_InitStructure.Pin = LCD_HREF_BIT|LCD_VSYNC_BIT|LCD_PCLK_BIT;
    GPIO_InitStructure.Speed = GPIO_SPEED_HIGH; 
    GPIO_InitStructure.Mode = GPIO_MODE_INPUT; 
    HAL_GPIO_Init(GPIOC, &GPIO_InitStructure);
    
    //HAL_RCC_MCOConfig(RCC_MCO2, RCC_MCO1SOURCE_HSE, RCC_MCODIV_1);
}
